Change phone number formatting

--- a/site/index.html
+++ b/site/index.html
@@ -218,7 +218,7 @@
         <a href="//www.facebook.com/james.magnarelli"><i class="fa fa-facebook-square"></i></a>
       </div>
       <div class="large-12 columns text-center">
-        <p id="phone-number">978.96JAMES (52637)</p>
+        <p id="phone-number">978-96-JAMES (52637)</p>
       </div>
     </div>
     <div class="content-container row" id="why-container">
