Make rendering of blog pages work, don't extend single-page navigation to blog posts themselves

--- a/index.html
+++ b/index.html
@@ -4,45 +4,8 @@ layout: default
   <!--[if lt IE 7]>
     <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
   <![endif]-->
-  <div id="homepage-display">
-    <div class="row">
-        <div class="large-12 columns">
-            <h1 class="text-center" id="name-header"><a href="#"> <span class="first">
-                <span id="first-first">J</span>ames
-              </span>
-              <span class="last">
-              <span id="first-last">M</span>agnarelli
-              </span>
-            </a></h1>
-        </div>
-    </div>
-    <div class="nav-stuff">
-      <div class="row">
-        <div class="text-center">
-          <a id="nav-who" class="nav-link" href="#who">
-            <div class="nav-text">who</div>
-            <div class="nav-help-text">about</div>
-          </a>
-          <a id="nav-what" class="nav-link" href="#what">
-            <div class="nav-text">what</div>
-            <div class="nav-help-text">projects</div>
-          </a>
-          <a id="nav-when"class="nav-link" href="#when">
-            <div class="nav-text">when</div>
-            <div class="nav-help-text">career</div>
-          </a>
-          <a id="nav-where"class="nav-link" href="#where">
-            <div class="nav-text">where</div>
-            <div class="nav-help-text">contact</div>
-          </a>
-          <a id="nav-why"class="nav-link" href="#why">
-            <div class="nav-text">why</div>
-            <div class="nav-help-text">blog</div>
-          </a>
-        </div>
-      </div>
-    </div>
-  </div>
+  
+  {% include top_nav.html %}
   <div class="content-container row" id="who-container">
     <div class="large-12 columns">
       <p>I'm James. I like to make things and talk to customers.</p>
