Update basic personal information

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@ layout: default
   {% include top_nav.html %}
   <div class="content-container row" id="who-container">
     <div class="large-12 columns">
-      <p>I'm James. I like to make things and talk to customers.</p>
-      <p>I'm passionate about feedback, and am happiest when rapidly iterating. I spend much of my time working on personal <a href="#what">projects</a>, most of which are available on <a href="http://www.github.com/jmagnarelli">GitHub</a>.</p>
+      <p>James, Jim, or Jimmy, take your pick. I'm a 24-year-old computer programmer who likes to read and occasionally gets outside.</p>
+      <p>I spend some of my time working on personal <a href="#what">projects</a>, most of which are available on <a href="http://www.github.com/jmagnarelli">GitHub</a>.</p>
       <p>
-      When I'm not coding, I like to mountain bike, play guitar, and travel. I can also make a mean pizza.
+      When I'm not coding, I like to mountain bike, play guitar (I'm still learning), and travel. I can also make good pizza.
       </p>
-      <p>I'm currently a Software Engineer Co-op at <a href="http://www.hubspot.com">HubSpot</a>, and a senior computer science student at <a href="http://www.northeastern.edu">Northeastern University</a>.</p>
+      <p>I'm currently a Software Engineer at <a href="http://www.product.hubspot.com">HubSpot</a> and a recent graduate of <a href="http://www.northeastern.edu">Northeastern University</a>.</p>
     </div>
   </div>
   <div class="content-container row" id="what-container">
