I no longer work at ResNet

--- a/index.html
+++ b/index.html
@@ -117,12 +117,12 @@ layout: default
       <div class="large-4 columns">
       <img class="logo" src="../misc/neu-red.png" alt="NORTH! EASTERN! NORTH! EASTERN!">
       <div class="row"><h7 class="job-title">ResNet System Administrator</h7></div>
-      <div class="row"><h7 class="job-title">Jul 2012 - Present</h7></div>
+      <div class="row"><h7 class="job-title">Jul 2012 - May 2015</h7></div>
       </div>
       <div class="large-8 columns">
-      <p class="job-descr">I maintain and develop the severs and other infrastructure at ResNet, a technical support office. I'm responsible for firewalls, data backup, DNS, print services, maintaining our Django applications, and more.
+      <p class="job-descr">I maintained and developed the severs and other infrastructure at ResNet, a technical support office. I was responsible for firewalls, data backup, DNS, print services, maintaining our Django applications, and more.
       </p>
-      <p class="techs-used">Primary technologies: Ubuntu Linux, Puppet, Active Directory</p>
+      <p class="techs-used">Primary technologies: Ubuntu Linux, Django, MySQL, Puppet, Active Directory</p>
       </div>
     </div>
     <p id="abridged" class="text-center">This is just the abridged version. Check out the whole thing on <a href="//www.linkedin.com/in/jmagnare">LinkedIn</a>.</p>
