Remove logos, add links.

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ layout: default
   <div class="content-container row" id="when-container">
     <div class="row info-listing">
       <div class="large-4 columns">
-      <img class="logo" src="../misc/hubspot_logo_black.png" alt="The cult of the sprocket">
+      <h2><a href="https://product.hubspot.com">HubSpot</a></h2>
       <div class="row"><h7 class="job-title">Co-op Software Engineer</h7></div>
       <div class="row"><h7 class="job-title">Jan - Jul 2014</h7></div>
       </div>
@@ -93,7 +93,7 @@ layout: default
     </div>
     <div class="row info-listing">
       <div class="large-4 columns">
-      <img class="logo" src="../misc/logo_ttcom.png" alt="America's second biggest tax collector">
+      <h2><a href="https://turbotax.intuit.com">Intuit</a></h2>
       <div class="row"><h7 class="job-title">Co-op Software Engineer</h7></div>
       <div class="row"><h7 class="job-title">Jan - Jul 2013</h7></div>
       </div>
@@ -105,7 +105,7 @@ layout: default
     </div>
     <div class="row info-listing">
       <div class="large-4 columns">
-      <img class="logo" src="../misc/empirix_logo.jpg" alt="They've moved to Billerica since I worked there">
+      <h2><a href="http://www.empirix.com">Empirix</a></h2>
       <div class="row"><h7 class="job-title">Co-op Software Engineer</h7></div>
       <div class="row"><h7 class="job-title">Jan - Jul 2012</h7></div>
       </div><div class="large-8 columns">
@@ -115,7 +115,7 @@ layout: default
     </div>
     <div class="row info-listing">
       <div class="large-4 columns">
-      <img class="logo" src="../misc/neu-red.png" alt="NORTH! EASTERN! NORTH! EASTERN!">
+      <h3><a href="http://www.northeastern.edu/resnet">Northeastern University</a></h3>
       <div class="row"><h7 class="job-title">ResNet System Administrator</h7></div>
       <div class="row"><h7 class="job-title">Jul 2012 - May 2015</h7></div>
       </div>
